--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>com.example.academia</param-value>
+            <param-value>com.example.fullint</param-value>
         </init-param>
         <init-param>
             <param-name>jersey.config.server.provider.classnames</param-name>
@@ -19,6 +19,7 @@
     <servlet-mapping>
         <servlet-name>Academia</servlet-name>
         <url-pattern>/api/*</url-pattern>
+<!--        <url-pattern>/api/faculty/*</url-pattern>-->
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
